{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 199,
  "lineage": "7c64cf11-dc82-93b2-1dc6-06e262f2275f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_nat_rule_collection",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Dnat",
            "azure_firewall_name": "frontend-firewall",
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/azureFirewalls/frontend-firewall/natRuleCollections/testcollection",
            "name": "testcollection",
            "priority": 100,
            "resource_group_name": "frontend-resources",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "20.76.232.101"
                ],
                "destination_ports": [
                  "3389"
                ],
                "name": "allowrdp",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": [],
                "translated_address": "10.0.0.5",
                "translated_port": "3389"
              },
              {
                "description": "",
                "destination_addresses": [
                  "20.76.232.101"
                ],
                "destination_ports": [
                  "80"
                ],
                "name": "web-rule",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": [],
                "translated_address": "10.0.0.5",
                "translated_port": "80"
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_firewall.fire",
            "azurerm_lb.main",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.bkend",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_virtual_network.bkend",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "bkend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/loadBalancers/bkndlb/frontendIPConfigurations/privateIPAddress",
                "name": "privateIPAddress",
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/virtualNetworks/backend-network/subnets/internal"
              }
            ],
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/loadBalancers/bkndlb",
            "location": "westeurope",
            "name": "bkndlb",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "backend-resources",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_subnet.internal",
            "azurerm_virtual_network.bkend",
            "azurerm_resource_group.bkend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/loadBalancers/frntndlb/frontendIPConfigurations/privateIPAddress",
                "name": "privateIPAddress",
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/virtualNetworks/backend-network/subnets/internal"
              }
            ],
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/loadBalancers/frntndlb",
            "location": "westeurope",
            "name": "frntndlb",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "frontend-resources",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.bkend",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.bkend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bkend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/loadBalancers/bkndlb/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/loadBalancers/bkndlb",
            "name": "BackEndAddressPool",
            "resource_group_name": "backend-resources"
          },
          "dependencies": [
            "azurerm_lb.bkend",
            "azurerm_resource_group.bkend",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.bkend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/loadBalancers/frntndlb/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/loadBalancers/frntndlb",
            "name": "BackEndAddressPool",
            "resource_group_name": "frontend-resources"
          },
          "dependencies": [
            "azurerm_subnet.internal",
            "azurerm_virtual_network.bkend",
            "azurerm_lb.main",
            "azurerm_resource_group.bkend",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_pool",
      "name": "bkend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 3389,
            "frontend_ip_configuration_id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/loadBalancers/bkndlb/frontendIPConfigurations/privateIPAddress",
            "frontend_ip_configuration_name": "privateIPAddress",
            "frontend_port_end": 50119,
            "frontend_port_start": 3389,
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/loadBalancers/bkndlb/inboundNatPools/rdp",
            "loadbalancer_id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/loadBalancers/bkndlb",
            "name": "rdp",
            "protocol": "Tcp",
            "resource_group_name": "backend-resources"
          },
          "dependencies": [
            "azurerm_resource_group.bkend",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.bkend",
            "azurerm_lb.bkend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 3389,
            "frontend_ip_configuration_id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/loadBalancers/frntndlb/frontendIPConfigurations/privateIPAddress",
            "frontend_ip_configuration_name": "privateIPAddress",
            "frontend_port_end": 50119,
            "frontend_port_start": 3389,
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/loadBalancers/frntndlb/inboundNatPools/rdp",
            "loadbalancer_id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/loadBalancers/frntndlb",
            "name": "rdp",
            "protocol": "Tcp",
            "resource_group_name": "frontend-resources"
          },
          "dependencies": [
            "azurerm_resource_group.bkend",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.bkend",
            "azurerm_lb.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "bkend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/loadBalancers/bkndlb/probes/http-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/loadBalancers/bkndlb",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 8080,
            "protocol": "Http",
            "request_path": "/health",
            "resource_group_name": "backend-resources"
          },
          "dependencies": [
            "azurerm_lb.bkend",
            "azurerm_resource_group.bkend",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.bkend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/loadBalancers/frntndlb/probes/http-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/loadBalancers/frntndlb",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 8080,
            "protocol": "Http",
            "request_path": "/health",
            "resource_group_name": "frontend-resources"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_resource_group.bkend",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.bkend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bkend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/networkSecurityGroups/backendSecurityGroup1",
            "location": "westeurope",
            "name": "backendSecurityGroup1",
            "resource_group_name": "backend-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rdp_allow",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.5",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_lb.bkend",
            "azurerm_lb.main",
            "azurerm_resource_group.bkend",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.bkend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/networkSecurityGroups/frontendSecurityGroup1",
            "location": "westeurope",
            "name": "frontendSecurityGroup1",
            "resource_group_name": "frontend-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rdp_allow",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/publicIPAddresses/frontendPublicIp1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.76.232.101",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "frontendPublicIp1",
            "resource_group_name": "frontend-resources",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AzureFirewallSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.64/26",
            "address_prefixes": [
              "10.1.0.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/virtualNetworks/frontend-network/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "frontend-resources",
            "virtual_network_name": "frontend-network"
          },
          "dependencies": [
            "azurerm_virtual_network.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.0/26",
            "address_prefixes": [
              "10.1.0.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/virtualNetworks/frontend-network/subnets/external",
            "name": "external",
            "resource_group_name": "frontend-resources",
            "virtual_network_name": "frontend-network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/26",
            "address_prefixes": [
              "10.0.0.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/virtualNetworks/backend-network/subnets/internal",
            "name": "internal",
            "resource_group_name": "backend-resources",
            "virtual_network_name": "backend-network"
          },
          "dependencies": [
            "azurerm_resource_group.bkend",
            "azurerm_virtual_network.bkend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bkend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/virtualNetworks/backend-network/subnets/internal",
            "network_security_group_id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/networkSecurityGroups/backendSecurityGroup1",
            "subnet_id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/virtualNetworks/backend-network/subnets/internal"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.bkend",
            "azurerm_lb.bkend",
            "azurerm_lb.main",
            "azurerm_network_security_group.bkend",
            "azurerm_resource_group.bkend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/virtualNetworks/frontend-network/subnets/external",
            "network_security_group_id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/networkSecurityGroups/frontendSecurityGroup1",
            "subnet_id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/virtualNetworks/frontend-network/subnets/external"
          },
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.external",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "bkend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/24"
            ],
            "guid": "2bd96c83-2383-4b83-8d17-67cb5ab8a538",
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/virtualNetworks/backend-network",
            "location": "westeurope",
            "name": "backend-network",
            "resource_group_name": "backend-resources",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/26",
                "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/virtualNetworks/backend-network/subnets/internal",
                "name": "internal",
                "security_group": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/networkSecurityGroups/backendSecurityGroup1"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.bkend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/24"
            ],
            "guid": "930803f0-4582-4110-9e19-b428af270a41",
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/virtualNetworks/frontend-network",
            "location": "westeurope",
            "name": "frontend-network",
            "resource_group_name": "frontend-resources",
            "subnet": [
              {
                "address_prefix": "10.1.0.0/26",
                "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/virtualNetworks/frontend-network/subnets/external",
                "name": "external",
                "security_group": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/networkSecurityGroups/frontendSecurityGroup1"
              },
              {
                "address_prefix": "10.1.0.64/26",
                "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/virtualNetworks/frontend-network/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "be-fe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/virtualNetworks/frontend-network/virtualNetworkPeerings/be-fe",
            "name": "be-fe",
            "remote_virtual_network_id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/virtualNetworks/backend-network",
            "resource_group_name": "frontend-resources",
            "use_remote_gateways": false,
            "virtual_network_name": "frontend-network"
          },
          "dependencies": [
            "azurerm_resource_group.bkend",
            "azurerm_resource_group.main",
            "azurerm_virtual_network.bkend",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "fe-be",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/backend-resources/providers/Microsoft.Network/virtualNetworks/backend-network/virtualNetworkPeerings/fe-be",
            "name": "fe-be",
            "remote_virtual_network_id": "/subscriptions/edde3a05-76ec-432c-839b-9a38e79a4668/resourceGroups/frontend-resources/providers/Microsoft.Network/virtualNetworks/frontend-network",
            "resource_group_name": "backend-resources",
            "use_remote_gateways": false,
            "virtual_network_name": "backend-network"
          },
          "dependencies": [
            "azurerm_virtual_network.bkend",
            "azurerm_virtual_network.main",
            "azurerm_resource_group.bkend",
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}